--- a/package.json
+++ b/package.json
@@ -2,10 +2,29 @@
   "name": "pokemon-backend",
   "version": "1.0.0",
   "description": "Pokemon app",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Yellow Jacket Trainers",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Yellow-Jacket-Trainers/pokemon-backend.git"
+  },
+  "keywords": [
+    "pokemon"
+  ],
+  "bugs": {
+    "url": "https://github.com/Yellow-Jacket-Trainers/pokemon-backend/issues"
+  },
+  "homepage": "https://github.com/Yellow-Jacket-Trainers/pokemon-backend#readme",
+  "dependencies": {
+    "axios": "^1.3.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.2"
+  }
 }
