--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.0.1",
     "mongoose": "^7.0.2"
   }
 }
